# jtsdk-nix

./: AUTHORS  CREDITS  ChangeLog  INSTALL  INSTALL.txt  Makefile.in  README  README-Debian.md  README.md  README.md.bak  README.pkg-lists  README.python3-pil  README.rst  README.txt  TO-DO  aclocal.m4  autogen.sh  configure  configure.ac  setup.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
config/: pkg_list_hamlib
data/: jtsdk.desktop.in  jtsdk.menu.in  jtsdk.xpm
debian/: changelog  control  copyright  jtsdk.dirs  jtsdk.docs  jtsdk.install  jtsdk.manpages  jtsdk.menu  watch
docs/: Makefile.in  jtsdk.1.txt  jtsdk.1.txt.in  main_menu_help.txt  setup_menu_help.txt
docs/source/: dev-guide-main.adoc  jtsdk-main.adoc  license.adoc
functions/: build_hamlib
jtsdk-nix-2.0.14/: ChangeLog  README.pkg-lists  README.python3-pil  autogen.sh
jtsdk-nix-2.0.14/data/: jtsdk.xpm
jtsdk-nix-2.0.14/docs/: Makefile.in
jtsdk-nix-2.0.14/docs/source/: jtsdk-main.adoc
jtsdk-nix-2.0.14/m4/: docs.m4
jtsdk-nix-2.0.14/manpages/: jtsdk-hamlib3.1.txt.in  jtsdk-wsjt.1.txt.in  jtsdk-wsjtx-sb.1.txt.in  jtsdk-wsjtx.1.txt.in  jtsdk-wspr.1.txt.in
jtsdk-nix-2.0.14/src/: jtsdk-hamlib3.in  jtsdk-wsjtx-sb.in  jtsdk-wsjtx.in  jtsdk-wspr.in
jtsdk-nix-2.0.14/src/docs/: wsjtx_menu_help.txt
m4/: cmake.m4  debian.m4  distro.m4  docs.m4  f2py.m4  f2py3.m4  gfortran.m4  git.m4  manpages.m4  mint.m4  parallel.m4  python2.m4  python3.m4  qmake.m4  separate.m4  svn.m4  ubuntu.m4
manpages/: Makefile.in  jtsdk-hamlib3.1.txt.in  jtsdk-wsjt.1.txt.in  jtsdk-wsjtx-sb.1.txt.in  jtsdk-wsjtx.1.txt.in  jtsdk-wspr.1.txt.in  jtsdk.1.txt.in
src/: jtsdk-hamlib3.in  jtsdk-hamlib3.sh.in  jtsdk-map65.sh.in  jtsdk-wsjt.in  jtsdk-wsjt.sh.in  jtsdk-wsjtx-sb.in  jtsdk-wsjtx.in  jtsdk-wsjtx.sh.in  jtsdk-wspr.in  jtsdk-wspr.sh.in  jtsdk-wsprx.sh.in  jtsdk.in  jtsdk.sh.in
src/docs/: main_menu_help.txt  wsjtx_menu_help.txt  wsjtxexp_menu_help.txt  wsjtxrc_menu_help.txt
